fixed title bar on mobile

--- a/proto/css/main.scss
+++ b/proto/css/main.scss
@@ -36,13 +36,7 @@ box-shadow: 5px 5px 28px 2px rgba(0,0,0,0.66);
 -moz-box-shadow:inset 5px 5px 28px 2px rgba(0,0,0,0.66);
 box-shadow:inset 5px 5px 28px 2px rgba(0,0,0,0.66);
 }
-nav{
-	z-index: 100;
-}
-nav, .header-height{
-  line-height: 2rem;
-   font-size: 1.3rem;
-}
+
 .container{
   padding: 0.5em 5%;
 }
@@ -60,44 +54,40 @@ header{
 	justify-content: center;
 	align-items:flex-start;
 }
+nav{
+  font-size: 1.3rem;
+  z-index: 100;
+}
 @media only screen and (min-width: 600px) {
   /* For tablets: */
 	nav, .header-height{
-  line-height: 2rem;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 .container{
   padding: 0.5em 10%;
-}
-#header-text{
-  position: absolute;
-  top:0;
-  color: $white;
-  z-index: 101;
-}
-#header-text{
-	font-family: 'Roboto', sans-serif;
-	font-size: 1.2rem;
 }
 }
 @media only screen and (min-width: 768px){
 	  /* For desktop: */
 	nav, .header-height{
-  line-height: 2.5rem;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 .container{
   padding: 0.5em 20%;
 }
-#header-text{
-	font-family: 'Roboto', sans-serif;
-	font-size: 1.5rem;
 }
+nav img{
+	display:block;
+	max-height: 1em;
+	width:auto;
 }
-
+nav>a{
+	float: left;
+}
 nav ul{
   margin: 0;
   padding: 0;
+  display: inline-block;
 }
 nav li{
   display: inline;
